@@ -1,3 +1,12 @@
+2022-05-24  G. Branden Robinson <g.branden.robinson@gmail.com>
+
+	* m4/groff.m4 (GROFF_CHECK_GROHTML_PROGRAMS): Migrate from
+	`AC_FOREACH` to `m4_foreach` to avoid obsolescence warning from
+	GNU Autoconf 2.70 or later.
+
+	Fixes <https://savannah.gnu.org/bugs/?61059>.  Thanks to Bjarni
+	Ingi Gislason for the report.
+
 2022-05-22  G. Branden Robinson <g.branden.robinson@gmail.com>
 
 	* man/groff.7.man: Rename "pilot" list macros for man(7) from
